# causal-sets-explorer

./: .appveyor.yml  .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  conanfile.txt  vcpkg.json
.ci/: clang-linux  gcc  gcc-linux  gcc-macos  macos-gcc
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  clang-format-check.yml  codacy.yml  codecov-upload.yml  codeql-analysis.yml  linux-clang.yml  linux-gcc.yml  macos.yml  windows-msvc.yml
.travis/: before_install.sh  install.sh  run.sh  run_project_build.sh
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: CausalGraph.hpp
scripts/: asan.sh  build.sh  clang-tidy.sh  cppcheck.sh
src/: CMakeLists.txt  dummy.cpp  lib.cpp  main.cpp
tests/: CMakeLists.txt  CatchFirstTest.cpp  CatchGraphTest.cpp  CausalGraph_test.cpp  GraphTest.cpp  Graph_test.cpp  Make_graph_test.cpp  main.cpp
unittests/: GraphTest.cpp  main.cpp
